--- a/ej3/Ej3.html
+++ b/ej3/Ej3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Ej3</title>
 </head>
 <body>
@@ -13,6 +15,6 @@
             Nullam sit amet nisl elementum elit convallis malesuada. Phasellus magna sem, semper quis, faucibus ut, rhoncus non, mi. Duis pellentesque, felis eu adipiscing ullamcorper, odio urna consequat arcu, at posuere ante quam non dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis scelerisque. Donec lacus neque, vehicula in, eleifend vitae, venenatis ac, felis. Donec arcu. Nam sed tortor nec ipsum aliquam ullamcorper. Duis accumsan metus eu urna. Aenean vitae enim. Integer lacus. Vestibulum venenatis erat eu odio. Praesent id metus.
         </span>
     </p>
-    <a class="enlace" href="#" onclick="muestra(); return false;">Seguir leyendo</a>
+    <a class="enlace" href="#">Seguir leyendo</a>
 </body>
 </html>
