--- a/ej4/Ej4.html
+++ b/ej4/Ej4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./index.js" type="module"></script>
     <title>Ej4</title>
 </head>
 <body>
@@ -14,6 +15,6 @@
         <li>Phasellus libero</li>
         <li>Maecenas nisl arcu</li>
     </ul>
-    <input type="button" value="Añadir elemento" onclick="anade();">
+    <input type="button" value="Añadir elemento" id="add-btn">
 </body>
 </html>
