--- a/ej8/Ej8.html
+++ b/ej8/Ej8.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="./index.js"></script>
 	<title>Ej8</title>
 </head>      
 <body>
+
+  <form id="form1">
     <p>
-        <label for="valor1">Ingrese primer valor:</label>
-        <input type="number" id="valor1" />
+      <label for="valor1">Ingrese primer valor:</label>
+      <input type="number" id="valor1" required />
     </p>
     <p>
         <label for="valor2">Ingrese segundo valor:</label>
-        <input type="number" id="valor2" />
+        <input type="number" id="valor2" required />
     </p>
     <p>
         <select id="operacion">
-        <option value="suma">Sumar</option>
-        <option value="resta">Restar</option>
+          <option value="suma">Sumar</option>
+          <option value="resta">Restar</option>
         </select>
     </p>
     <p>
-        <input type="button" value="Operar" id="calculo" />
-    </p>
-    <p id="resultado1"></p>
+        <input type="submit" value="Operar" id="calculo" />
+    </p>    
+  </form>
+  
+  <p id="resultado1"></p>
+
+  <form id="form2">
     <select multiple="multiple" id="operaciones">
-        <option value="suma">Sumar</option>
-        <option value="resta">Restar</option>
+      <option value="suma">Sumar</option>
+      <option value="resta">Restar</option>
     </select>
     <p>
-        <input type="button" value="Operar" id="calculomultiple" />
+        <input type="submit" value="Operar" id="calculomultiple" />
     </p>
-    <p id="resultado2"></p>
+  </form>
+
+  <p id="resultado2"></p>
+
 </body>
 
 </html>
