--- a/ej9/Ej9.html
+++ b/ej9/Ej9.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="./index.js"></script>
 	<title>Ej9</title>
 </head>      
 <body>
     <p>
-      <label for="comentarios">Ingrese sus comentarrios</label>
+      <label for="comentarios">Ingrese sus comentarios</label>
     </p>
     <p>
       <textarea name="comentarios" id="comentarios" cols="30" rows="10" maxlength="50"></textarea>
@@ -17,6 +18,5 @@
       <span>Caracteres posibles:</span>
       <span id="resultado">50</span>
     </p>
-  </body>
-  
-  </html>
+</body>  
+</html>
